<resources>
    <string name="app_name">AirController</string>
    <string name="no_read_external_storage_perm">无访问存储卡权限，请前往设置中开启</string>
    <string name="this_file_is_not_a_dir">该文件不是一个目录</string>
    <string name="no_write_external_storage_perm">无操作存储卡权限，请前往设置中开启</string>
    <string name="invalid_file_name">无效文件名，请重新输入</string>
    <string name="file_name_cant_empty">文件名不能为空</string>
    <string name="folder_cant_empty">文件名不能为空</string>
    <string name="file_create_fail">文件创建失败</string>
    <string name="file_path_cant_empty">文件路径不能为空</string>
    <string name="delete_file_fail">删除文件失败</string>
    <string name="rename_file_fail">文件重命名失败</string>
    <string name="move_file_fail">文件移动失败</string>
    <string name="delete_image_fail">删除图片失败</string>
    <string name="image_not_exist">图片不存在</string>
    <string name="delete_audio_file_fail">删除音频文件失败</string>
    <string name="place_holder_delete_file_fail">删除文件%s失败</string>
    <string name="the_dir_not_exist">文件夹不存在</string>
    <string name="place_holder_delete_part_of_success">删除%d个项目成功，其中%d个项目失败</string>
    <string name="delete_album_fail">删除相册失败</string>
    <string name="delete_video_file_fail">删除视频文件失败</string>
    <string name="get_download_dir_fail">获取下载目录失败</string>
    <string name="download_dir_not_exist">下载目录不存在</string>
    <string name="label_device_info">机型信息</string>
    <string name="label_device_name">设备名称：</string>
    <string name="label_wifi_name">无线网络：</string>
    <string name="label_connection_info">连接信息</string>
    <string name="label_computer_name">电脑名称：</string>
    <string name="label_computer_ip">电脑地址：</string>
    <string name="label_computer_os">操作系统：</string>
    <string name="declaration_open_source">本项目完全开源，请放心使用！</string>
    <string name="support_developer">支持作者</string>
    <string name="intro_open_link_and_star">打开以上链接，点击star支持我们</string>
    <string name="disconnect">断开连接</string>
    <string name="tip_phone_not_connected_to_wlan">手机未连接到WIFI，请先将手机连接到与你的电脑至同一网络并再次尝试</string>
    <string name="connected_to_wifi">连接到WIFI</string>
    <string name="tip_disconnect">确定断开连接吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="expand">展开</string>
    <string name="scan">扫一扫</string>
    <string name="connect">连接</string>
    <string name="about">关于</string>
    <string name="rationale_camera_perm">扫描二维码需要开启摄像头权限，请前往设置页面开启</string>
    <string name="rationale_ask_ok">立即开启</string>
    <string name="rationale_ask_cancel">退出</string>
    <string name="project_address">项目地址</string>
    <string name="url_project">https://github.com/air-controller</string>
    <string name="url_project_desktop">https://github.com/air-controller/air-controller-desktop</string>
    <string name="tip_support_developer">点击"必须支持"打开项目网页后，可点击右上角star支持我，非常感谢你的支持！</string>
    <string name="support">必须支持</string>
    <string name="refuse">残忍拒绝</string>
    <string name="hint_connected_and_operation_normal">已连接，运行正常</string>
    <string name="hint_connected_and_part_of_normal">已连接，部分桌面功能运行异常，请点击上面按钮进行修复</string>
    <string name="hint_connected_and_all_not_working">已连接，桌面功能运行异常，请点击上面按钮进行修复</string>
    <string name="hint_disconnected">未连接</string>
    <string name="fix_immediately">立即修复</string>
    <string name="rationale_permissions">为确保功能运行正常，请点击立即开启并允许应用开启所需权限</string>
    <string name="readiness">准备就绪</string>
    <string name="enjoying">Enjoying</string>
    <string name="install_bundle_upload_failure">安装包上传失败，原因：%s</string>
    <string name="installation_package_not_found">安装包未找到!</string>
    <string name="create_contact_failure">联系人创建失败</string>
    <string name="contact_not_found">联系人未找到。</string>
    <string name="update_photo_failure">修改联系人头像失败！</string>
    <string name="delete_contact_failure">删除联系人失败！</string>
    <string name="rationale_get_accounts">为正常使用该功能，我们需要读取账户权限，请前往设置->应用管理页面开启</string>
    <string name="rationale_read_contacts">为正常使用该功能，我们需要读取联系人权限，请前往设置->应用管理页面开启</string>
    <string name="rationale_write_contacts">为正常使用该功能，我们需要修改联系人权限，请前往设置->应用管理页面开启</string>
    <string name="lack_of_necessary_permissions">缺少必要权限，请在手机端点击确定并开启</string>
    <string name="rationale_read_install_packages">为正常使用该功能，我们需要读取已安装应用权限，请前往设置->应用管理页面开启</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="some_permissions_not_granted">部分权限未开启</string>
    <string name="authorize_now">立即授权</string>
    <string name="get_photo_dir_failure">获取图片目录失败</string>
    <string name="upload_audio_file_fail">上传音频失败</string>
    <string name="upload_video_file_failure">上传视频失败</string>
    <string name="working">工作中 -_- </string>
    <string name="ip_addr">地址</string>
    <string name="access_control">访问控制</string>
    <string name="security_access">安全性</string>
    <string name="allow">允许</string>
    <string name="disallow">禁止</string>
    <string name="no_pwd">无</string>
    <string name="password">密码</string>
    <string name="web_pwd_requirement">密码应至少包含6位数字</string>
    <string name="set_web_connection">设置网页连接</string>
    <string name="web_access_is_not_allowed">网页访问是禁止的，请在手机端"设置网页连接-访问控制"设置"允许"</string>
    <string name="web_passwd_is_not_correct">密码不正确，请重新输入</string>
    <string name="rationale_draw_overlay_window">为了更好地给你提供服务，请允许AirController显示在其它应用的上层</string>
    <string name="star">Star</string>
    <string name="choose_a_way_to_support">选择一种方式支持作者</string>
    <string name="give_a_reward">打赏</string>
    <string name="qr_code_saved">二维码已保存到相册</string>
    <string name="reward_any_amount">打赏任意金额，支持作者继续开发，谢谢您的支持！</string>
    <string name="watch_ad">看广告</string>
    <string name="delete_image_partial_failure">部分图片删除失败，失败数量：%s</string>
    <string name="delete_album_partial_failure">部分相册删除失败，失败数量：%s</string>
    <string name="delete_audio_partial_failure">部分音频删除失败，失败数量：%s</string>
    <string name="delete_video_partial_failure">部分视频删除失败，失败数量：%s</string>
    <string name="delete_video_folder_partial_failure">部分视频文件夹删除失败，失败数量：%s</string>
    <string name="delete_video_folder_fail">删除视频文件夹失败</string>
    <string name="delete_file_partial_failure">部分文件删除失败，失败数量：%s</string>
</resources>