<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_indicator"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_circle_green" />

            <TextView
                    android:id="@+id/text_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/btn_indicator"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:text="已连接"
                    tools:text="已连接" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_device_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:textColor="#333333"
                            android:text="@string/label_device_info"
                            android:textStyle="bold"
                            tools:text="设备信息：" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#f5f5f5"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="10dp" />

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/label_text_color"
                                android:text="@string/label_device_name"
                                android:textSize="16sp"
                                tools:text="设备名称：" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="MIX2S" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/label_text_color"
                                android:text="@string/label_wifi_name"
                                android:textSize="16sp"
                                tools:text="无线网络：" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="YHDM" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/card_device_info"
                    android:layout_centerHorizontal="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:textColor="#333333"
                            android:text="@string/label_connection_info"
                            android:textStyle="bold"
                            tools:text="连接信息：" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#f5f5f5"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="10dp" />

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/label_text_color"
                                android:text="@string/label_computer_name"
                                android:textSize="16sp"
                                tools:text="电脑名称：" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="MacBook" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/label_text_color"
                                android:text="@string/label_computer_ip"
                                android:textSize="16sp"
                                tools:text="电脑地址：" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="192.168.1.200" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/label_text_color"
                                android:text="@string/label_computer_os"
                                android:textSize="16sp"
                                tools:text="操作系统：" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="MacOS 11.8" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher">

                </ImageView>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/declaration_open_source"
                        tools:text="本项目完全开源，请放心使用" />

                <TextView
                        android:id="@+id/text_support_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/support_developer"
                        android:textSize="14sp"
                        android:textColor="#ff2869d3"
                        android:padding="10dp"
                        tools:text="支持作者" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:text="@string/disconnect"
            android:textSize="14sp"
            android:textColor="@color/white"
            tools:text="断开连接"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp" />

</RelativeLayout>