<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".support.DeveloperSupportActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_a_way_to_support"
            android:textSize="20sp"
            android:textColor="@color/yaHei"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_star"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btn_star">
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_star_1"
                android:clickable="false">
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_star"
                    app:tint="#26282d"
                    android:clickable="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/star"
                    android:textColor="#26282d"
                    android:textSize="16sp"
                    android:clickable="false"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#d2d2d2"
                android:clickable="false"/>
        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="1000"
                    android:textColor="#26282d"
                    android:textSize="16sp"
                    android:clickable="false"/>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reward"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_reward"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/give_a_reward"
            android:textAllCaps="false"/>
</androidx.appcompat.widget.LinearLayoutCompat>