<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="viewModel"
                type="com.youngfeng.android.assistant.connection.viewmodel.ConnectionViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_finish"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:layout_gravity="start|center_vertical"
                    android:src="@mipmap/ic_close_mark" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_commit"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@mipmap/ic_check_mark_thin" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
            android:text="@string/set_web_connection"
            android:textColor="@color/yaHei"
            android:textSize="25sp"/>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:background="@drawable/background_round">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ip_addr"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/yaHei"
                    tools:text="地址" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@{viewModel.ipAddress}"
                    android:textSize="18sp"
                    android:textColor="@color/yaHei"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    tools:text="192.168.0.1" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/background_edit_text"
                android:layout_marginTop="15dp"
                android:visibility="@{viewModel.enablePwd ? View.VISIBLE : View.GONE}">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="密码"
                    android:textSize="18sp" />

            <ImageView
                    android:id="@+id/image_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_eye"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.switchPwdVisibility()}" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/image_pwd"
                    android:minWidth="250dp"
                    android:paddingEnd="5dp"
                    android:gravity="end|center_vertical"
                    android:hint="@string/web_pwd_requirement"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="numberPassword"
                    android:text="@={viewModel.passwd}" />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="#f5f5f5" />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/yaHei"
                    android:textStyle="bold"
                    android:text="@string/access_control" />

            <include
                    android:id="@+id/select_access_state"
                    layout="@layout/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_access"
                    android:textSize="18sp"
                    android:textColor="@color/yaHei"
                    android:textStyle="bold" />

            <include
                    android:id="@+id/select_pwd"
                    layout="@layout/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>